add gallery function and test cases
